--- a/.github/workflows/static-analysis.yaml
+++ b/.github/workflows/static-analysis.yaml
@@ -24,6 +24,7 @@ jobs:
     name: pre-commit checks
     runs-on: ubuntu-latest
     permissions:
+      # required to read from the repo
       contents: read
     steps:
       - uses: actions/checkout@v4
