--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -15,6 +15,7 @@ jobs:
     name: Unit tests
     runs-on: ubuntu-latest
     permissions:
+      # required to read from the repo
       contents: read
     steps:
       - name: Check out code
